--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   
 </head>
 <body>
-  <!-- <script src="./task-01.js" type="module"></script>
+  <script src="./task-01.js" type="module"></script>
   <script src="./task-02.js" type="module"></script>
   <script src="./task-03.js" type="module"></script>
-  <script src="./task-04.js" type="module"></script> -->
+  <script src="./task-04.js" type="module"></script>
   <script src="./task-05.js" type="module"></script>
-  <!-- <script src="./task-06.js" type="module"></script> -->
+  <script src="./task-06.js" type="module"></script>
 </body>
 </html>
